handlebars basic functionalities

--- a/JS_Back-end/2. ExpressJS and Templating/views/home.hbs
+++ b/JS_Back-end/2. ExpressJS and Templating/views/home.hbs
@@ -1,5 +1,7 @@
 <h1>{{title}}!</h1>
 
+{{{userText}}}
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, porro.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, porro.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, porro.</p>
