--- a/JS_Back-end/2. ExpressJS and Templating/views/layouts/main.hbs
+++ b/JS_Back-end/2. ExpressJS and Templating/views/layouts/main.hbs
@@ -10,6 +10,7 @@
         <nav>
             <a href="/home">Home</a>
             <a href="/about">About</a>
+            <a href="/list">List</a>
             <a href="/login">Login</a>
         </nav>
     </header>
