Add unique id to each

--- a/JS_Back-end/1.2 Exercise/project_attempt/src/views/addCat.html
+++ b/JS_Back-end/1.2 Exercise/project_attempt/src/views/addCat.html
@@ -25,11 +25,11 @@
         <form action="/cats/add-cat" method="POST" class="cat-form">
             <h2>Add Cat</h2>
             <label for="name">Name</label>
-            <input name="name" type="text" id="name">
+            <input name="name" type="text" id="name" value="TestCat">
             <label for="description">Description</label>
-            <textarea name="description" id="description"></textarea>
+            <textarea name="description" id="description" placeholder="TEST"></textarea>
             <label for="image">Image</label>
-            <input name="imageUrl" type="text" id="image">
+            <input name="imageUrl" type="text" id="image" value="TestCatURL">
             <label for="group">Breed</label>
             <select name="breed" id="group">
                 <option value="Fluffy Cat">Fluffy Cat</option>
