--- a/JS_Back-end/2.1 Exercise/src/views/details.hbs
+++ b/JS_Back-end/2.1 Exercise/src/views/details.hbs
@@ -22,7 +22,7 @@
                             </div>
 
                             <p class="disc">Description: {{movie.description}}</p>
-                                <p class="card-category">Category: {{movie.caregory}}</p>
+                                <p class="card-category">Category: {{movie.category}}</p>
                         </div>
                     </div>
                     <div class="card_right">
