--- a/JS_Back-end/1.2 Exercise/project_attempt/src/views/editCat.html
+++ b/JS_Back-end/1.2 Exercise/project_attempt/src/views/editCat.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../content/styles/site.css">
+    <link rel="stylesheet" href="/styles/site.css">
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
     <title>Cat Shelter</title>
 </head>
@@ -22,15 +22,14 @@
         <h1>Cat Shelter</h1>
     </header>
     <main>
-        <form action="#" method="" class="cat-form" enctype="multipart/form-data">
+        <form method="POST" class="cat-form" enctype="multipart/form-data">
             <h2>Edit Cat</h2>
             <label for="name">Name</label>
-            <input type="text" id="name" value="Pretty Cat">
+            <input type="text" id="name" value="{{name}}">
             <label for="description">Description</label>
-            <textarea
-                id="description">Dominant and aggressive to other cats. Will probably eat you in your sleep. Very cute tho.</textarea>
-            <label for="image">Image</label>
-            <input type="file" id="image">
+            <textarea id="description">{{description}}</textarea>
+            <label for="text">Image</label>
+            <input type="file" name="imageUrl" id="image" value="{{imageUrl}}">
             <label for="group">Breed</label>
             <select id="group">
                 <option value="Fluffy Cat">Fluffy Cat</option>
