--- a/JS_Back-end/1.2 Exercise/project_attempt/src/views/editCat.html
+++ b/JS_Back-end/1.2 Exercise/project_attempt/src/views/editCat.html
@@ -22,15 +22,15 @@
         <h1>Cat Shelter</h1>
     </header>
     <main>
-        <form method="POST" class="cat-form" enctype="multipart/form-data">
+        <form method="POST" class="cat-form">
             <h2>Edit Cat</h2>
             <label for="name">Name</label>
-            <input type="text" id="name" value="{{name}}">
+            <input type="text" id="name" name="name" value="{{name}}">
             <label for="description">Description</label>
-            <textarea id="description">{{description}}</textarea>
-            <label for="text">Image</label>
-            <input type="file" name="imageUrl" id="image" value="{{imageUrl}}">
-            <label for="group">Breed</label>
+            <textarea id="description" name="description">{{description}}</textarea>
+            <label for="image">Image</label>
+            <input type="text" name="imageUrl" id="image" value="{{imageUrl}}">
+            <label for="group" name="breed">Breed</label>
             <select id="group">
                 <option value="Fluffy Cat">Fluffy Cat</option>
             </select>
