show breed on edit page (selected)

--- a/JS_Back-end/1.2 Exercise/project_attempt/src/views/editCat.html
+++ b/JS_Back-end/1.2 Exercise/project_attempt/src/views/editCat.html
@@ -31,8 +31,9 @@
             <label for="image">Image</label>
             <input type="text" name="imageUrl" id="image" value="{{imageUrl}}">
             <label for="group" name="breed">Breed</label>
-            <select id="group">
-                <option value="Fluffy Cat">Fluffy Cat</option>
+            <select id="group" name="breed">
+                <!-- <option value="Fluffy Cat">Fluffy Cat</option> -->
+                {{breeds}}
             </select>
             <button>Edit Cat</button>
         </form>
