--- a/JS_Back-end/1.2 Exercise/project_attempt/src/views/addCat.html
+++ b/JS_Back-end/1.2 Exercise/project_attempt/src/views/addCat.html
@@ -32,9 +32,7 @@
             <input name="imageUrl" type="text" id="image" value="TestCatURL">
             <label for="group">Breed</label>
             <select name="breed" id="group">
-                <option value="Fluffy Cat">Fluffy Cat</option>
-                <option value="Fluffy Cat">Fluffy Cat</option>
-                <option value="Fluffy Cat">Fluffy Cat</option>
+                {{breeds}}
             </select>
             <button type="submit">Add Cat</button>
         </form>
