--- a/JS_Back-end/1.2 Exercise/project_attempt/src/views/addCat.html
+++ b/JS_Back-end/1.2 Exercise/project_attempt/src/views/addCat.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/styles/site.css">
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
-    <title>Cat Shelter</title>
+    <title>{{pageTitle}}</title>
 </head>
 
 <body>
