--- a/JS_Back-end/1.2 Exercise/project_attempt/src/views/home/index.html
+++ b/JS_Back-end/1.2 Exercise/project_attempt/src/views/home/index.html
@@ -8,7 +8,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="/styles/site.css">
     <link rel="shortcut icon" href="https://img.icons8.com/ios-filled/50/000000/cat-footprint.png" type="image/png">
-    <title>Cat Shelter</title>
+    <title>{{pageTitle}}</title>
 </head>
 
 <body>
