--- a/JS_Back-end/movie-magic-project/src/views/details.hbs
+++ b/JS_Back-end/movie-magic-project/src/views/details.hbs
@@ -16,10 +16,9 @@
                                 <div class="second-info">
                                     
                                     <p class="card-year">Year: {{movie.year}}</p>
-                                    <p class="card-ranking">Rating: <span id="stars">&#x2605; &#x2605; &#x2605;
-                                            &#x2605;</span></p>
+                                    <p class="card-ranking">Rating: <span id="stars">{{movie.rating}}</span></p>
                                 </div>
-
+{{!-- &#x2605; --}}
                             </div>
 
                             <p class="disc">Description: {{movie.description}}</p>
