--- a/JS_Back-end/movie-magic-project/src/views/search.hbs
+++ b/JS_Back-end/movie-magic-project/src/views/search.hbs
@@ -2,10 +2,10 @@
 
             <section id="search">
                 <h1>Search</h1>
-                <form action="" method="" class="form">
-                    <input type="text" class="search" name="search" placeholder="Title...">
-                    <input type="text" name="" class="genre" placeholder="Genre...">
-                    <input type="number" name="" class="year" placeholder="Year...">
+                <form method="GET" class="form">
+                    <input type="text" class="search" name="title" value="{{filter.title}}" placeholder="Title...">
+                    <input type="text" name="genre" value="{{filter.genre}}" class="genre" placeholder="Genre...">
+                    <input type="number" name="year" value="{{filter.year}}" class="year" placeholder="Year...">
                     <input type="submit" value="search">
                 </form>
             </section>
@@ -17,7 +17,7 @@
 
                     {{#each movies}}
                     <!-- If there are posts for creature in the database display each of them -->
-                    <div class="flip flip-vertical">
+                    {{!-- <div class="flip flip-vertical">
                         <div class="front">
                             <img src="{{imageUrl}}"
                                 alt="{{title}}">
@@ -28,7 +28,8 @@
                             <p>Description: {{description}}</p>
                             <a href="/movies/{{_id}}" class="details">Details</a>
                         </div>
-                    </div>
+                    </div> --}}
+                    {{>movie}}
 
 
                     <!-- If there are no posts matched display: -->
