--- a/JS_Back-end/movie-magic-project/src/views/details.hbs
+++ b/JS_Back-end/movie-magic-project/src/views/details.hbs
@@ -16,7 +16,7 @@
                                 <div class="second-info">
                                     
                                     <p class="card-year">Year: {{movie.year}}</p>
-                                    <p class="card-ranking">Rating: <span id="stars">{{movie.rating}}</span></p>
+                                    <p class="card-ranking">Rating: <span id="stars">{{{rating}}}</span></p>
                                 </div>
 {{!-- &#x2605; --}}
                             </div>
