attach cast button

--- a/JS_Back-end/movie-magic-project/src/views/details.hbs
+++ b/JS_Back-end/movie-magic-project/src/views/details.hbs
@@ -22,7 +22,8 @@
                             </div>
 
                             <p class="disc">Description: {{movie.description}}</p>
-                                <p class="card-category">Category: {{movie.category}}</p>
+                            <p class="card-category">Category: {{movie.category}}</p>
+                            <a href = "" class="details">Attach</a>
                         </div>
                     </div>
                     <div class="card_right">
