--- a/JS_Back-end/movie-magic-project/src/views/details.hbs
+++ b/JS_Back-end/movie-magic-project/src/views/details.hbs
@@ -23,7 +23,7 @@
 
                             <p class="disc">Description: {{movie.description}}</p>
                             <p class="card-category">Category: {{movie.category}}</p>
-                            <a href = "" class="details">Attach</a>
+                            <a href = "/movies/{{movie.id}}/attach" class="details">Attach</a>
                         </div>
                     </div>
                     <div class="card_right">
