show casts in details

--- a/JS_Back-end/movie-magic-project/src/views/details.hbs
+++ b/JS_Back-end/movie-magic-project/src/views/details.hbs
@@ -31,6 +31,23 @@
                             alt="image">
                     </div>
                 </div>
+                {{#each movieCast}}
+                <div class="main-cast-card">
+                        
+                        <div class="cast-card">
+                            <div class="card-img">
+                                <img src="{{imageUrl}}"
+                                    alt="cast">
+                            </div>
+                            <div class="cast-info">
+                                <h1>{{name}}</h1>
+                                <h3>Age: {{age}}</h3>
+                                <h3>Born: {{born}}</h3>
+                                {{!-- <h3>Name in Movie: {{movieCast.imageUrl}}</h3> --}}
+                            </div>
+                        </div>
+                </div>
+                {{/each}}
 
             </section>
 
