--- a/JS_Back-end/movie-magic-project/src/views/layouts/main.hbs
+++ b/JS_Back-end/movie-magic-project/src/views/layouts/main.hbs
@@ -21,6 +21,10 @@
                 <li><a href="/search">Search</a></li>
                 <li><a href="/casts/create">Create Cast</a></li>
                 <li><a href="/about">About</a></li>
+                <!--Guest-->
+                <li><a href="/auth/logut">Login</a></li>
+                <li><a href="/auth/login">Login</a></li>
+                <li><a href="/auth/register">Register</a></li>
             </ul>
 
         </nav>
