--- a/JS_Back-end/movie-magic-project/src/views/layouts/main.hbs
+++ b/JS_Back-end/movie-magic-project/src/views/layouts/main.hbs
@@ -22,9 +22,9 @@
                 <li><a href="/casts/create">Create Cast</a></li>
                 <li><a href="/about">About</a></li>
                 <!--Guest-->
-                <li><a href="/auth/logut">Logout</a></li>
                 <li><a href="/auth/login">Login</a></li>
                 <li><a href="/auth/register">Register</a></li>
+                <li><a href="/auth/logout">Logout</a></li>
             </ul>
 
         </nav>
