--- a/React/3. Routing/src/index.css
+++ b/React/3. Routing/src/index.css
@@ -15,11 +15,21 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #000000;
   text-decoration: inherit;
+  margin-left: 10px;
+  background-color: white;
+  padding: 5px;
+  border-radius: 6px;
+  cursor: pointer;
+  
 }
 a:hover {
-  color: #535bf2;
+  background-color: gainsboro;
+}
+
+nav {
+  margin-bottom: 10px;
 }
 
 body {
