--- a/HTML & CSS/Exam prep/03.Musicfy_Resources/styles.css
+++ b/HTML & CSS/Exam prep/03.Musicfy_Resources/styles.css
@@ -13,8 +13,6 @@ h1 {
     font-family: "Montserrat";
 }
 
-
-
 nav {
     display: flex;
     align-items: center;
@@ -46,4 +44,27 @@ nav {
 .menu ul li:hover {
     background-color: rgb(77, 77, 77);
 }
+
+.green {
+    height: 300px;
+    background-color: rgb(0, 176, 0);
+    text-align: center;
+}
+
+.green h1 {
+    color: white;
+    padding-top: 50px;
+}
+
+.music { 
+    width: 45%;
+    position: absolute;
+    top: 100px;
+}
+
+.music img {
+    width: 100%;
+
+}
+
 
